chore: switch from JUnit 5 to JUnit 4.11
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>